--- a/dotfiles/config/vis/config
+++ b/dotfiles/config/vis/config
@@ -76,7 +76,7 @@ visualizer.spectrum.left.margin=0.02
 visualizer.ellipse.character=▮
 
 ##The radius of each color ring in the ellipse visualizer. Defaults to 2.
-# visualizer.ellipse.radius=10
+visualizer.ellipse.radius=1
 
 
 ##Configures what character the lorenz visualizer will use. Specifying a space (e.g " ") means the
